[gd_scene load_steps=9 format=3 uid="uid://pw068sg14fvs"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_qkxm0"]

[sub_resource type="LabelSettings" id="LabelSettings_4p03o"]
font_size = 70
outline_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_size = 60
shadow_color = Color(0.972549, 0.407843, 0, 0.301961)

[sub_resource type="LabelSettings" id="LabelSettings_f4q2e"]
line_spacing = 0.0
font_size = 100
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_647tb"]
bg_color = Color(0.922378, 0.434787, 0.283731, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y0r3n"]
font_size = 35

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2y82"]
size = Vector2(341, 1280)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_burj7"]
bg_color = Color(0.854902, 0.203922, 0.278431, 0.784314)

[sub_resource type="LabelSettings" id="LabelSettings_0qdu5"]
font_size = 35

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_qkxm0")

[node name="Tutorial_Text" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Collect_Love" type="Label" parent="Tutorial_Text"]
layout_mode = 0
offset_top = 176.0
offset_right = 720.0
offset_bottom = 840.0
theme_override_font_sizes/font_size = 60
text = "Collect Love,"
label_settings = SubResource("LabelSettings_4p03o")
horizontal_alignment = 1
justification_flags = 162

[node name="Spread_Peace" type="Label" parent="Tutorial_Text"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 840.0
theme_override_font_sizes/font_size = 60
text = "Spread Peace,"
label_settings = SubResource("LabelSettings_4p03o")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="Avoid_War" type="Label" parent="Tutorial_Text"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 664.0
theme_override_font_sizes/font_size = 60
text = "Avoid War"
label_settings = SubResource("LabelSettings_4p03o")
horizontal_alignment = 1
vertical_alignment = 2
justification_flags = 162

[node name="Score_Count" type="Label" parent="."]
layout_mode = 0
offset_left = 592.0
offset_right = 712.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 100
text = "0"
label_settings = SubResource("LabelSettings_f4q2e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 40.0
offset_right = 576.0
offset_bottom = 104.0
theme_override_styles/fill = SubResource("StyleBoxFlat_647tb")
show_percentage = false

[node name="Label" type="Label" parent="ProgressBar"]
layout_mode = 0
offset_right = 544.0
offset_bottom = 64.0
text = "Peace meter"
label_settings = SubResource("LabelSettings_y0r3n")
horizontal_alignment = 1
vertical_alignment = 1

[node name="move_left" type="TouchScreenButton" parent="."]
position = Vector2(190, 640)
scale = Vector2(1.12, 1.12)
shape = SubResource("RectangleShape2D_g2y82")
shape_visible = false
passby_press = true
action = "move_left"

[node name="move_right" type="TouchScreenButton" parent="."]
position = Vector2(552, 640)
scale = Vector2(-1, -1.08819)
shape = SubResource("RectangleShape2D_g2y82")
shape_visible = false
passby_press = true
action = "move_right"

[node name="Health_bar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 1152.0
offset_right = 656.0
offset_bottom = 1216.0
theme_override_styles/fill = SubResource("StyleBoxFlat_burj7")
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="Health_bar"]
layout_mode = 0
offset_right = 592.0
offset_bottom = 64.0
text = "Love"
label_settings = SubResource("LabelSettings_0qdu5")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="ProgressBar" to="." method="_on_progress_bar_value_changed"]
